[project]
name = "visual_behavior"
version = "0.0.1"
description = "Forked to specify dependencies in pyproject.toml and support Python 3.10+."
dependencies = [
    "np-session>=0.4.26",
    "allensdk>=1.2.0",
    "pandas>=1.5.3",
    "statsmodels>=0.13.5",
    "tables>=3.8.0",
    "cython>=0.29.33",
    "scikit-image>=0.20.0",
    "h5py>=3.8.0",
    "numba>=0.56.4", # not 3.11 compatible as of Mar '23
    "numpy==1.23.5",
    "aiohttp>=3.8.4",
    "markupsafe==2.0.0",
    "beautifulsoup4>=4.12.0",
    "pywin32>=305",
    "scikit-image>=0.20.0",
    "aiohttp>=3.8.0",
    "llvmlite>=0.39.1",
    "numba>=0.56.4",
    "h5py>=3.8.0",
    "numpy>=1.23.0, <1.24.0",
    "statsmodels>=0.13.5",
    "pandas>=1.5.3",
    "tables>=3.8.0",
    "pytz2022.7.1",
    "async-timeout>=4.0.0",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "blue>=0.9.1",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "bump>=1.3.2",
    "types-backports>=0.1.3",
    "ruff>=0.0.260",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
