[project]
name = "visual_behavior"
authors = [
    {name="Marina Garrett", email="marinag@alleninstitute.org"},
    {name="Doug Ollerenshaw", email="dougo@alleninstitute.org"},
]
maintainers = [
    {name="Ben Hardcastle", email="ben.hardcastle@alleninstitute.org"},
]
version = "0.13.1"
description = "Python package for analyzing behavioral data for Brain Observatory: Visual Behavior. Forked to specify dependencies in pyproject.toml and support Python >3.7."
dependencies = [
    "allensdk>=2.15.0",
    "scikit-learn>=1.2.2",
    "python-dateutil>=2.8.2",
    "zipfile36>=0.1.3",
    "pymongo>=4.3.3",
    "pyyaml>=6.0",
    "dash>=2.9.2",
    "plotly>=5.14.1",
    "hdmf>=3.4.7",
    "h5py>=3.8.0",
    "umap>=0.1.1",
    "opencv-python-headless>=4.7.0.72",
]
requires-python = ">=3.8"
readme = "README.md"
license = [
    {file = "LICENSE.md"},
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "flake8",
    "pytest-html",
    "markupsafe==2.0.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
